impostorCode/impostorSettingsTab.css
body {
    position:absolute;
    left:0;
    top:0;
    width:100%;
    height:100%;
    background:#0b0a1f;
}

.card {
    background: #151531;
    border-radius:1dvh;
}

.settingsPage {
    position:absolute;
    left:0;
    top:0;
    width:100%;
    height:100%;
}

.settingsPage > .title {
    position:absolute;
    left:50%;
    top:7%;
    transform:translate(-50%,-50%);
    color:#d5baf2;
    font-size:6dvh;
    font-family:Arial, Helvetica, sans-serif;
    font-weight:bolder;
}

.settingsPage > .countSelector {
    position:absolute;
    left:50%;
    top:20dvh;
    transform:translateX(-50%);
    width:90%;
    height:8dvh;
}

.settingsPage > .countSelector > .label {
    position:absolute;
    left:5%;
    top:1.5dvh;
    color:#fff;
    font-family: Arial, Helvetica, sans-serif;
    font-weight:bold;
    font-size:4dvh;
}

.settingsPage > .playerHolder {
    position:absolute;
    left:50%;
    top:30dvh;
    transform:translateX(-50%);
    width:90%;
    height:0;
}

.settingsPage > .afterPlayerHolder {
    position:absolute;
    left:50%;
    top:60em;
    transform:translate(-50%);
    width:90%;
    height:5em;
}

.settingsPage > .playerHolder > .playerCard {
    position:absolute;
    left:50%;
    transform:translateX(-50%);
    width:95%;
    height:8dvh;
}

.settingsPage > .playerHolder > .playerCard > .editableLabel {
    position:absolute;
    left:5%;
    top:2dvh;
    font-size:3.5dvh;
    font-weight:bold;
    font-family:Arial, Helvetica, sans-serif;
    color:#FFF;
    background:none;
    width:50%;
    border:none;
    border-bottom: 0em #FFF solid;
    transition: border-bottom-width 0.15s;
}

.editableLabel:focus {
    outline:none;
    border-bottom-width:0.05em
}

.removeButton {
    position:absolute;
    right:2dvw;
    top: 2dvh;
    width:4dvh;
    height:4dvh;
}

.settingsPage > .afterPlayerHolder > .impostorCount {
    position:absolute;
    left:50%;
    top:10dvh;
    transform:translateX(-50%);
    width:100%;
    height:8dvh;
}

.countLabel {
    position:absolute;
    left:5%;
    top:1.5dvh;
    color:#fff;
    font-family: Arial, Helvetica, sans-serif;
    font-weight:bold;
    font-size:4dvh;
}

.impostorCount > .editableLabel {
    position:absolute;
    right:5%;
    top:1.5dvh;
    font-size:4dvh;
    font-weight:bold;
    font-family:Arial, Helvetica, sans-serif;
    color:#FFF;
    background:none;
    width:8dvh;
    height:5dvh;
    border:none;
    border-bottom: 0em #FFF solid;
    background:#383478;
    text-align:center;
    transition: border-bottom-width 0.15s;
    border-radius:0.2em;
}

.wordSelector {
    position:absolute;
    left:50%;
    top:20dvh;
    transform:translateX(-50%);
    width:100%;
    height:8dvh;
}

.wordHolder {
    position:absolute;
    left:50%;
    top:30dvh;
    transform:translateX(-50%);
    width:90%;
    height:0;
}

.wordHolder > .wordCard {
    position:absolute;
    left:50%;
    transform:translateX(-50%);
    width:100%;
    height:8dvh;
}

.wordCard > .editableLabel {
    position:absolute;
    left:5%;
    top:1.5dvh;
    font-size:3.5dvh;
    font-weight:bold;
    font-family:Arial, Helvetica, sans-serif;
    color:#FFF;
    background:none;
    width:50%;
    border:none;
    border-bottom: 0em #FFF solid;
    transition: border-bottom-width 0.15s;
}

.afterWordHolder {
    position:absolute;
    left:50%;
    top:40dvh;
    transform:translate(-50%);
    width:100%;
    height:25dvh;
}

.addButton {
    position:absolute;
    left:50%;
    top:0;
    transform:translateX(-50%);
    width:90%;
    height:8dvh;
    font-size:4dvh;
    font-weight:bold;
    font-family:Arial, Helvetica, sans-serif;
    color:#d5baf2;
    text-align:center;
    line-height: 2em;
    vertical-align: center;
}

.startGame {
    position:absolute;
    left:50%;
    top:12dvh;
    transform:translateX(-50%);
    width:90%;
    height:10dvh;
    font-size:6dvh;
    font-weight:bold;
    font-family:Arial, Helvetica, sans-serif;
    background:#8638b9;
    color:#FFF;
    text-align:center;
    line-height: 10dvh;
    vertical-align: center;
    border-radius:2em;
    box-shadow: 0px 0px 0.5em 0.1em #8638b9;
}

